// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING TextField component WHEN the TextField component is rendered THEN it should match the snapshot 1`] = `
<View
  style={
    [
      {
        "position": "relative",
      },
    ]
  }
>
  <View
    style={
      {
        "left": 16,
        "position": "absolute",
        "top": 12,
        "zIndex": 1,
      }
    }
  >
    <Text
      aria-label="Title"
      style={
        [
          {
            "fontFamily": "RalewayBold",
            "fontSize": 16,
            "fontWeight": 700,
          },
          {
            "color": "#fafafa",
          },
          {
            "fontWeight": 400,
          },
          {
            "color": "#fafafa",
          },
        ]
      }
    >
      Title
    </Text>
  </View>
  <TextInput
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    placeholder="Search field"
    placeholderTextColor="#A3A3A3"
    style={
      [
        undefined,
        {
          "backgroundColor": "#262626",
          "borderRadius": 8,
          "borderWidth": 1,
          "color": "#fafafa",
          "paddingBottom": 12,
          "paddingHorizontal": 16,
          "paddingTop": 36,
        },
        {
          "fontFamily": "RalewayRegular",
          "fontSize": 16,
        },
        {
          "borderColor": "transparent",
        },
      ]
    }
    testID="textField__textInput"
    value="test"
  />
</View>
`;

exports[`TESTING TextField component WHEN the TextField has errors THEN it should match the snapshot 1`] = `
<View
  style={
    [
      {
        "position": "relative",
      },
    ]
  }
>
  <View
    style={
      {
        "left": 16,
        "position": "absolute",
        "top": 12,
        "zIndex": 1,
      }
    }
  >
    <Text
      aria-label="Title"
      style={
        [
          {
            "fontFamily": "RalewayBold",
            "fontSize": 16,
            "fontWeight": 700,
          },
          {
            "color": "#fafafa",
          },
          {
            "fontWeight": 400,
          },
          {
            "color": "#fafafa",
          },
        ]
      }
    >
      Title
    </Text>
  </View>
  <TextInput
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    placeholder="Search field"
    placeholderTextColor="#A3A3A3"
    style={
      [
        undefined,
        {
          "backgroundColor": "#262626",
          "borderRadius": 8,
          "borderWidth": 1,
          "color": "#fafafa",
          "paddingBottom": 12,
          "paddingHorizontal": 16,
          "paddingTop": 36,
        },
        {
          "fontFamily": "RalewayRegular",
          "fontSize": 16,
        },
        {
          "borderColor": "#F97316",
        },
      ]
    }
    testID="textField__textInput"
    value=""
  />
  <Text
    style={
      [
        {
          "fontFamily": "RalewayRegular",
          "fontSize": 16,
        },
        {
          "color": "#fafafa",
        },
        {
          "fontWeight": 400,
        },
        {
          "color": "#F97316",
          "paddingTop": 8,
        },
      ]
    }
    testID="textField__errorMessage"
  >
    Title is required.
  </Text>
</View>
`;
